common/yak/java/jsp/parser/jsp_parser.go
// Code generated from ./JSPParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package jspparser // JSPParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/yaklang/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type JSPParser struct {
	*antlr.BaseParser
}

var JSPParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func jspparserParserInit() {
	staticData := &JSPParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "'<!DOCTYPE'", "", "", "", "'<?xml'", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "'PUBLIC'",
		"'SYSTEM'", "", "", "", "", "", "':'", "", "", "", "'/'",
	}
	staticData.SymbolicNames = []string{
		"", "JSP_COMMENT", "JSP_SCRIPT_COMMENT", "JSP_CONDITIONAL_COMMENT",
		"SCRIPT_OPEN", "STYLE_OPEN", "DTD", "CDATA", "JSP_INCLUDE_DIRECTIVE_SKIP",
		"WHITESPACES", "XML_DECLARATION", "WHITESPACE_SKIP", "CLOSE_TAG_BEGIN",
		"TAG_BEGIN", "DIRECTIVE_BEGIN", "DECLARATION_BEGIN", "ECHO_EXPRESSION_OPEN",
		"JSP_IF_BLOCK", "SCRIPTLET_OPEN", "QUOTE", "TAG_END", "EQUALS", "EL_EXPR_START",
		"JSP_STATIC_CONTENT_CHARS", "JSP_END", "ATTVAL_ATTRIBUTE", "ATTVAL_VALUE",
		"EL_EXPR_END", "DTD_PUBLIC", "DTD_SYSTEM", "DTD_WHITESPACE_SKIP", "DTD_QUOTED",
		"DTD_IDENTIFIER", "BLOB_CLOSE", "BLOB_CONTENT", "JSP_JSTL_COLON", "TAG_JSP_IF_FRAGMENT",
		"TAG_SLASH_END", "TAG_CLOSE", "TAG_SLASH", "DIRECTIVE_END", "TAG_IDENTIFIER",
		"TAG_WHITESPACE", "SCRIPT_BODY", "SCRIPT_SHORT_BODY", "STYLE_BODY",
		"STYLE_SHORT_BODY", "ATTVAL_WHITESPACE_SKIP", "ATTVAL_EL_EXPR", "EL_EXPR_CONTENT",
	}
	staticData.RuleNames = []string{
		"jspDocuments", "jspDocument", "jspStart", "jspElements", "htmlMiscs",
		"jspScript", "htmlElement", "htmlCloseElement", "htmlBegin", "htmlBeginElement",
		"tagJspFragment", "htmlTag", "jspDirective", "htmlContents", "htmlContent",
		"jspIfBlock", "elExpression", "htmlAttribute", "htmlAttributeName",
		"htmlAttributeValue", "htmlAttributeValueElement", "htmlTagName", "htmlChardata",
		"htmlMisc", "htmlComment", "xhtmlCDATA", "dtd", "dtdElementName", "publicId",
		"systemId", "xml", "jspScriptlet", "jspExpression", "scriptletStart",
		"scriptletContent", "javaScript", "style",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// JSPParserInit initializes any static state used to implement JSPParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewJSPParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func JSPParserInit() {
	staticData := &JSPParserParserStaticData
	staticData.once.Do(jspparserParserInit)
}

// NewJSPParser produces a new parser instance for the optional input antlr.TokenStream.
func NewJSPParser(input antlr.TokenStream) *JSPParser {
	JSPParserInit()
	this := new(JSPParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &JSPParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "JSPParser.g4"

	return this
}

// JSPParser tokens.
const (
	JSPParserEOF                        = antlr.TokenEOF
	JSPParserJSP_COMMENT                = 1
	JSPParserJSP_SCRIPT_COMMENT         = 2
	JSPParserJSP_CONDITIONAL_COMMENT    = 3
	JSPParserSCRIPT_OPEN                = 4
	JSPParserSTYLE_OPEN                 = 5
	JSPParserDTD                        = 6
	JSPParserCDATA                      = 7
	JSPParserJSP_INCLUDE_DIRECTIVE_SKIP = 8
	JSPParserWHITESPACES                = 9
	JSPParserXML_DECLARATION            = 10
	JSPParserWHITESPACE_SKIP            = 11
	JSPParserCLOSE_TAG_BEGIN            = 12
	JSPParserTAG_BEGIN                  = 13
	JSPParserDIRECTIVE_BEGIN            = 14
	JSPParserDECLARATION_BEGIN          = 15
	JSPParserECHO_EXPRESSION_OPEN       = 16
	JSPParserJSP_IF_BLOCK               = 17
	JSPParserSCRIPTLET_OPEN             = 18
	JSPParserQUOTE                      = 19
	JSPParserTAG_END                    = 20
	JSPParserEQUALS                     = 21
	JSPParserEL_EXPR_START              = 22
	JSPParserJSP_STATIC_CONTENT_CHARS   = 23
	JSPParserJSP_END                    = 24
	JSPParserATTVAL_ATTRIBUTE           = 25
	JSPParserATTVAL_VALUE               = 26
	JSPParserEL_EXPR_END                = 27
	JSPParserDTD_PUBLIC                 = 28
	JSPParserDTD_SYSTEM                 = 29
	JSPParserDTD_WHITESPACE_SKIP        = 30
	JSPParserDTD_QUOTED                 = 31
	JSPParserDTD_IDENTIFIER             = 32
	JSPParserBLOB_CLOSE                 = 33
	JSPParserBLOB_CONTENT               = 34
	JSPParserJSP_JSTL_COLON             = 35
	JSPParserTAG_JSP_IF_FRAGMENT        = 36
	JSPParserTAG_SLASH_END              = 37
	JSPParserTAG_CLOSE                  = 38
	JSPParserTAG_SLASH                  = 39
	JSPParserDIRECTIVE_END              = 40
	JSPParserTAG_IDENTIFIER             = 41
	JSPParserTAG_WHITESPACE             = 42
	JSPParserSCRIPT_BODY                = 43
	JSPParserSCRIPT_SHORT_BODY          = 44
	JSPParserSTYLE_BODY                 = 45
	JSPParserSTYLE_SHORT_BODY           = 46
	JSPParserATTVAL_WHITESPACE_SKIP     = 47
	JSPParserATTVAL_EL_EXPR             = 48
	JSPParserEL_EXPR_CONTENT            = 49
)

// JSPParser rules.
const (
	JSPParserRULE_jspDocuments              = 0
	JSPParserRULE_jspDocument               = 1
	JSPParserRULE_jspStart                  = 2
	JSPParserRULE_jspElements               = 3
	JSPParserRULE_htmlMiscs                 = 4
	JSPParserRULE_jspScript                 = 5
	JSPParserRULE_htmlElement               = 6
	JSPParserRULE_htmlCloseElement          = 7
	JSPParserRULE_htmlBegin                 = 8
	JSPParserRULE_htmlBeginElement          = 9
	JSPParserRULE_tagJspFragment            = 10
	JSPParserRULE_htmlTag                   = 11
	JSPParserRULE_jspDirective              = 12
	JSPParserRULE_htmlContents              = 13
	JSPParserRULE_htmlContent               = 14
	JSPParserRULE_jspIfBlock                = 15
	JSPParserRULE_elExpression              = 16
	JSPParserRULE_htmlAttribute             = 17
	JSPParserRULE_htmlAttributeName         = 18
	JSPParserRULE_htmlAttributeValue        = 19
	JSPParserRULE_htmlAttributeValueElement = 20
	JSPParserRULE_htmlTagName               = 21
	JSPParserRULE_htmlChardata              = 22
	JSPParserRULE_htmlMisc                  = 23
	JSPParserRULE_htmlComment               = 24
	JSPParserRULE_xhtmlCDATA                = 25
	JSPParserRULE_dtd                       = 26
	JSPParserRULE_dtdElementName            = 27
	JSPParserRULE_publicId                  = 28
	JSPParserRULE_systemId                  = 29
	JSPParserRULE_xml                       = 30
	JSPParserRULE_jspScriptlet              = 31
	JSPParserRULE_jspExpression             = 32
	JSPParserRULE_scriptletStart            = 33
	JSPParserRULE_scriptletContent          = 34
	JSPParserRULE_javaScript                = 35
	JSPParserRULE_style                     = 36
)

// IJspDocumentsContext is an interface to support dynamic dispatch.
type IJspDocumentsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllJspStart() []IJspStartContext
	JspStart(i int) IJspStartContext
	AllJspDocument() []IJspDocumentContext
	JspDocument(i int) IJspDocumentContext

	// IsJspDocumentsContext differentiates from other interfaces.
	IsJspDocumentsContext()
}

type JspDocumentsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJspDocumentsContext() *JspDocumentsContext {
	var p = new(JspDocumentsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspDocuments
	return p
}

func InitEmptyJspDocumentsContext(p *JspDocumentsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspDocuments
}

func (*JspDocumentsContext) IsJspDocumentsContext() {}

func NewJspDocumentsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JspDocumentsContext {
	var p = new(JspDocumentsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPParserRULE_jspDocuments

	return p
}

func (s *JspDocumentsContext) GetParser() antlr.Parser { return s.parser }

func (s *JspDocumentsContext) EOF() antlr.TerminalNode {
	return s.GetToken(JSPParserEOF, 0)
}

func (s *JspDocumentsContext) AllJspStart() []IJspStartContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IJspStartContext); ok {
			len++
		}
	}

	tst := make([]IJspStartContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IJspStartContext); ok {
			tst[i] = t.(IJspStartContext)
			i++
		}
	}

	return tst
}

func (s *JspDocumentsContext) JspStart(i int) IJspStartContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspStartContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspStartContext)
}

func (s *JspDocumentsContext) AllJspDocument() []IJspDocumentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IJspDocumentContext); ok {
			len++
		}
	}

	tst := make([]IJspDocumentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IJspDocumentContext); ok {
			tst[i] = t.(IJspDocumentContext)
			i++
		}
	}

	return tst
}

func (s *JspDocumentsContext) JspDocument(i int) IJspDocumentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspDocumentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspDocumentContext)
}

func (s *JspDocumentsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JspDocumentsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JspDocumentsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSPParserVisitor:
		return t.VisitJspDocuments(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSPParser) JspDocuments() (localctx IJspDocumentsContext) {
	localctx = NewJspDocumentsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, JSPParserRULE_jspDocuments)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(74)
				p.JspStart()
			}

		}
		p.SetState(79)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4716154) != 0) {
		{
			p.SetState(80)
			p.JspDocument()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(85)
		p.Match(JSPParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IJspDocumentContext is an interface to support dynamic dispatch.
type IJspDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Xml() IXmlContext
	Dtd() IDtdContext
	JspScript() IJspScriptContext
	JspIfBlock() IJspIfBlockContext
	JspElements() IJspElementsContext

	// IsJspDocumentContext differentiates from other interfaces.
	IsJspDocumentContext()
}

type JspDocumentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJspDocumentContext() *JspDocumentContext {
	var p = new(JspDocumentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspDocument
	return p
}

func InitEmptyJspDocumentContext(p *JspDocumentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspDocument
}

func (*JspDocumentContext) IsJspDocumentContext() {}

func NewJspDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JspDocumentContext {
	var p = new(JspDocumentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPParserRULE_jspDocument

	return p
}

func (s *JspDocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *JspDocumentContext) Xml() IXmlContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IXmlContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IXmlContext)
}

func (s *JspDocumentContext) Dtd() IDtdContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDtdContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDtdContext)
}

func (s *JspDocumentContext) JspScript() IJspScriptContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspScriptContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspScriptContext)
}

func (s *JspDocumentContext) JspIfBlock() IJspIfBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspIfBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspIfBlockContext)
}

func (s *JspDocumentContext) JspElements() IJspElementsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspElementsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspElementsContext)
}

func (s *JspDocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JspDocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JspDocumentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSPParserVisitor:
		return t.VisitJspDocument(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSPParser) JspDocument() (localctx IJspDocumentContext) {
	localctx = NewJspDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, JSPParserRULE_jspDocument)
	p.SetState(92)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(87)
			p.Xml()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(88)
			p.Dtd()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(89)
			p.JspScript()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(90)
			p.JspIfBlock()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(91)
			p.JspElements()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IJspStartContext is an interface to support dynamic dispatch.
type IJspStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	JspScript() IJspScriptContext
	WHITESPACES() antlr.TerminalNode

	// IsJspStartContext differentiates from other interfaces.
	IsJspStartContext()
}

type JspStartContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJspStartContext() *JspStartContext {
	var p = new(JspStartContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspStart
	return p
}

func InitEmptyJspStartContext(p *JspStartContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspStart
}

func (*JspStartContext) IsJspStartContext() {}

func NewJspStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JspStartContext {
	var p = new(JspStartContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPParserRULE_jspStart

	return p
}

func (s *JspStartContext) GetParser() antlr.Parser { return s.parser }

func (s *JspStartContext) JspScript() IJspScriptContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspScriptContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspScriptContext)
}

func (s *JspStartContext) WHITESPACES() antlr.TerminalNode {
	return s.GetToken(JSPParserWHITESPACES, 0)
}

func (s *JspStartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JspStartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JspStartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSPParserVisitor:
		return t.VisitJspStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSPParser) JspStart() (localctx IJspStartContext) {
	localctx = NewJspStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, JSPParserRULE_jspStart)
	p.SetState(96)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case JSPParserDIRECTIVE_BEGIN, JSPParserDECLARATION_BEGIN, JSPParserECHO_EXPRESSION_OPEN, JSPParserSCRIPTLET_OPEN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(94)
			p.JspScript()
		}

	case JSPParserWHITESPACES:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(95)
			p.Match(JSPParserWHITESPACES)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IJspElementsContext is an interface to support dynamic dispatch.
type IJspElementsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetBeforeContent returns the beforeContent rule contexts.
	GetBeforeContent() IHtmlMiscsContext

	// GetAfterContent returns the afterContent rule contexts.
	GetAfterContent() IHtmlMiscsContext

	// SetBeforeContent sets the beforeContent rule contexts.
	SetBeforeContent(IHtmlMiscsContext)

	// SetAfterContent sets the afterContent rule contexts.
	SetAfterContent(IHtmlMiscsContext)

	// Getter signatures
	AllHtmlMiscs() []IHtmlMiscsContext
	HtmlMiscs(i int) IHtmlMiscsContext
	HtmlElement() IHtmlElementContext
	HtmlCloseElement() IHtmlCloseElementContext
	JspScript() IJspScriptContext
	JspExpression() IJspExpressionContext
	JspIfBlock() IJspIfBlockContext
	Style() IStyleContext
	JavaScript() IJavaScriptContext

	// IsJspElementsContext differentiates from other interfaces.
	IsJspElementsContext()
}

type JspElementsContext struct {
	antlr.BaseParserRuleContext
	parser        antlr.Parser
	beforeContent IHtmlMiscsContext
	afterContent  IHtmlMiscsContext
}

func NewEmptyJspElementsContext() *JspElementsContext {
	var p = new(JspElementsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspElements
	return p
}

func InitEmptyJspElementsContext(p *JspElementsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JSPParserRULE_jspElements
}

func (*JspElementsContext) IsJspElementsContext() {}

func NewJspElementsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JspElementsContext {
	var p = new(JspElementsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPParserRULE_jspElements

	return p
}

func (s *JspElementsContext) GetParser() antlr.Parser { return s.parser }

func (s *JspElementsContext) GetBeforeContent() IHtmlMiscsContext { return s.beforeContent }

func (s *JspElementsContext) GetAfterContent() IHtmlMiscsContext { return s.afterContent }

func (s *JspElementsContext) SetBeforeContent(v IHtmlMiscsContext) { s.beforeContent = v }

func (s *JspElementsContext) SetAfterContent(v IHtmlMiscsContext) { s.afterContent = v }

func (s *JspElementsContext) AllHtmlMiscs() []IHtmlMiscsContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IHtmlMiscsContext); ok {
			len++
		}
	}

	tst := make([]IHtmlMiscsContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IHtmlMiscsContext); ok {
			tst[i] = t.(IHtmlMiscsContext)
			i++
		}
	}

	return tst
}

func (s *JspElementsContext) HtmlMiscs(i int) IHtmlMiscsContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHtmlMiscsContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHtmlMiscsContext)
}

func (s *JspElementsContext) HtmlElement() IHtmlElementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHtmlElementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHtmlElementContext)
}

func (s *JspElementsContext) HtmlCloseElement() IHtmlCloseElementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHtmlCloseElementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHtmlCloseElementContext)
}

func (s *JspElementsContext) JspScript() IJspScriptContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspScriptContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspScriptContext)
}

func (s *JspElementsContext) JspExpression() IJspExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJspExpressionContext)
}

func (s *JspElementsContext) JspIfBlock() IJspIfBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJspIfBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}
